--- a/index.html
+++ b/index.html
@@ -1,50 +1,13 @@
 
+
 <!DOCTYPE html>
 <html>
 <head>
     <title>Gluttonous Snake Game</title>
-    <style>
-        #gameCanvas {
-            border: 1px solid black;
-            background-color: #f0f0f0;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <canvas id="gameCanvas" width="600" height="400"></canvas>
-    <style>
-        #gameArea {
-    width: 400px;
-    height: 400px;
-    border: 1px solid black;
-    position: relative;
-    background-image: url('path_to_grass_texture.jpg'); /* Add a grass texture background */
-    background-size: cover;
-}
-
-.snake {
-    width: 10px;
-    height: 10px;
-    background-color: green;
-    position: absolute;
-    border-radius: 50%; /* Make snake segments circular for a more cartoonish look */
-    box-shadow: 0 0 5px rgba(0, 128, 0, 0.5); /* Add a slight glow to the snake */
-}
-
-.snake-head {
-    background-color: darkgreen; /* Different color for snake's head */
-    z-index: 1; /* Ensure head is above other segments */
-}
-
-.food {
-    width: 10px;
-    height: 10px;
-    background-color: red;
-    position: absolute;
-    border-radius: 50%; /* Circular food */
-    box-shadow: 0 0 5px rgba(255, 0, 0, 0.5); /* Glow effect for food */
-}
-</style>
-    <script src="snakeGame.js"></script>
+    <div id="gameArea"></div>
+    <script src="script.js"></script>
 </body>
 </html>
