--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <html>
 <head>
     <title>Gluttonous Snake Game</title>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
 </head>
 <body>
     <div id="gameArea"></div>
-    <script src="script.js"></script>
+    <script src="./script.js"></script>
 </body>
 </html>
