--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
-
-
 <!DOCTYPE html>
 <html>
 <head>
     <title>Gluttonous Snake Game</title>
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <div id="gameArea"></div>
-    <script src="./script.js"></script>
+    <button id="restartButton" style="display: none;">Restart Game</button>
+    <div id="score">Score: 0</div>
+    <script src="script.js"></script>
 </body>
 </html>
